2003-03-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/lowlevellock.h (__lll_mutex_lock):
	Use atomic_exchange_and_add instead of __lll_add.
	(__lll_mutex_timedlock): Likewise.
	Patch by Ian Wienand.

2003-03-24  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc64/sysdep-cancel.h
	(SINGLE_THREAD_P): Fix typo.
	* tst-cancel-wrappers.sh: Handle '.'ed symbols.

2003-03-31  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-align.
	* tst-align.c: New file.
	* sysdeps/i386/Makefile: Define CFLAGS-tst-align.
	* sysdeps/x86_64/Makefile: Likewise.

	* sysdeps/i386/tls.h (CALL_THREAD_FCT): Align stack of called
	function correctly.

	* tst-tsd2.c: Add casts to avoid warnings.

2003-03-30  Ulrich Drepper  <drepper@redhat.com>

	* descr.h (struct pthread): Move most often used elements to the front.

2003-03-29  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (libpthread-routines): Add pthread_atfork.
	(libpthread-static-only-routines): Add pthread_atfork.

2003-03-28  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/tls.h: Include nptl/descr.h after the definition
	of TLS_DTV_AT_TP.
	(INSTALL_DTV): Add parens.
	(THREAD_GETMEM, THREAD_GETMEM_NC, THREAD_SETMEM, THREAD_SETMEM_NC):
	Use passed descr instead of THREAD_SELF.
	* sysdeps/unix/sysv/linux/sh/lowlevelmutex.S
	(__lll_mutex_timedlock_wait): Correct expected value after
	spurious wakeup.
	* sysdeps/unix/sysv/linux/sh/pthread_cond_broadcast.S:
	Release lock before waking up the waiters.
	* sysdeps/unix/sysv/linux/sh/pthread_cond_wait.S: Correct exit
	criteria.  Reorderstruct passed to cleanup handler.  Fix
	handling of cancellation and failung pthread_mutex_unlock call.
	Use __pthread_enable_asynccancel_2 instead of
	__pthread_enable_asynccancel.
	* sysdeps/unix/sysv/linux/sh/pthread_cond_timedwait.S: Likewise.
	Return result of lock re-get if it fails.
	* sysdeps/unix/sysv/linux/sh/pthread_once.S: Fix wrong argument
	for __pthread_cleanup_push.